[project]
name = "onnx-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Anton", email = "antoxaz18@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "onnxruntime (==1.18.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "lap (>=0.5.12,<0.6.0)",
]

[tool.poetry.scripts]
#build exe with pyinstaller
build-script = "build:install"

[tool.poetry.group.dev.dependencies]
pyinstaller = "*"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
